@startuml

title JPEDAL - Updated UML Diagram
left to right direction

class CAIT {
    +parseFile(String path) : Node
    +parseFile(Path path) : Node
    +parseSource(String sourceCode) : Node
    +findMatch(String pattern, String studentCode) : Match
    +findMatches(String pattern, String studentCode) : List<Match>
}

class TreeMatcher {
    +findMatches(Node patternNode, Node studentNode) : List<Match>
    +shallowMatch(Node nodeA, Node nodeB) : boolean
    +deepMatch(Node nodeA, Node nodeB) : boolean
}

class Symbol {
    -name: SimpleName
    -dataType: Type
    -value: Expression
    +getName() : SimpleName
    +setName(SimpleName name) : void
    +getDataType() : Type
    +setDataType(Type dataType) : void
    +getValue() : Expression
    +setValue(Expression value) : void
}

class SymbolTable {
    -table: Map<Symbol, Symbol>
    +merge(SymbolTable other) : SymbolTable
    +addSymbol(String key, Symbol value) : void
    +getSymbolDataType(String key) : Type
    +getSymbolName(String key) : SimpleName
    +getSymbolValue(String key) : Expression
}

class ScopedSymbolTable extends SymbolTable {
    -scopes: Map<String, SymbolTable>
    +addScope(String scopeName) : void
    +getScope(String scopeName) : SymbolTable
    +lookup(String key, String scopeName) : Symbol
}

class InstructorSymbolTable extends SymbolTable {
    -instructorToStudentMapping: Map<String, Map<String, Symbol>>
    +addStudentSymbol(String instructorKey, String studentKey, Symbol studentSymbol) : void
    +lookupStudentSymbol(String instructorKey, String studentKey) : Symbol
    +mergeInstructorTable(InstructorSymbolTable otherTable) : void
    +hasConflict(String instructorKey, String studentKey) : boolean
}

class Match {
    -studentNode: Node
    -instructorNode: Node
    -symbolTable: SymbolTable
    +getStudentSymbol() : SymbolTable
    +getInstructorSymbol() : SymbolTable
}

CAIT -> TreeMatcher
TreeMatcher -> SymbolTable
SymbolTable <|-- ScopedSymbolTable
SymbolTable <|-- InstructorSymbolTable
SymbolTable -> Symbol
Match --> SymbolTable

@enduml
